--- a/theme.css
+++ b/theme.css
@@ -1,7 +1,6 @@
 /**
- * @name Neon Breeze
- * @description เทมเพลตธีมเริ่มต้นแนวไล่สี/นีออน
- * @author You
+ * @name Discord Raiden Ei
+ * @author BlackinLite
  * @version 1.0.0
  */
 
